# syscase

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  afl  afl-analyze.c  afl-cmin  afl-fuzz.c  afl-showmap.c  afl-tmin.c  build.sh  clean.sh  config.h
.github/workflows/: ci.yml
include/afl/: alloc-inl.h  banner.h  binary.h  bitmap.h  capture.h  classify.h  config.h  debug.h  describe.h  dry_run.h  extras.h  forkserver.h  globals.h  postprocessor.h  queue_entry.h  run_target.h  shm.h  signal.h  simplify_trace.h  testcase.h  tty.h  usage.h
include/afl/bitmap/: coverage.h  favorable.h  minimize.h  winners.h
include/afl/capture/: operation.h  plot.h  stats.h
include/afl/fuzz/: common.h  one.h  stages.h
include/afl/mutate/: eff.h  flip.h
include/afl/setup/: args.h  asan.h  checks.h  dirs.h  files.h  qemu.h  sync.h
include/afl/syscase/: coverage.h
include/afl/testcase/: calibrate.h  common.h  result.h  resume.h  rotate.h  sync.h  trim.h
include/afl/utils/: buffer.h  cpu.h  file.h  math.h  proc.h  random.h  time.h
src/: main.c
src/afl/: banner.c  binary.c  bitmap.c  capture.c  classify.c  describe.c  dry_run.c  extras.c  forkserver.c  postprocessor.c  queue_entry.c  run_target.c  shm.c  signal.c  simplify_trace.c  testcase.c  tty.c  usage.c
src/afl/bitmap/: coverage.c  favorable.c  minimize.c  winners.c
src/afl/capture/: operation.c  plot.c  stats.c
src/afl/fuzz/: common.c  one.c
src/afl/setup/: args.c  asan.c  checks.c  dirs.c  files.c  qemu.c  sync.c
src/afl/syscase/: coverage.c
src/afl/testcase/: calibrate.c  resume.c  (+3 more)
src/app/: main.c
(+53 files in other folders)
